samples/_failures_safe/1761535247_727677_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c465d6b.c: In function ‘main’:
./samples/SAFE/__tmp_7c465d6b.c:135: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_7c465d6b.c:134:17: error: expected declaration or statement at end of input
  134 |                 for
      |                 ^~~
./samples/SAFE/__tmp_7c465d6b.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c465d6b.c:134:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c465d6b.c:134:17: error: expected declaration or statement at end of input
